# Kursach

./: CMakeLists.txt  README.md  main.cpp
database/: phrases.db
include/: Game.hpp
src/: Game.cpp
